# learn-ocaml

./: .ci-macosx.sh  .gitignore  .mailmap  Dockerfile  Dockerfile.test-client  docker-compose.yml  dune-project  learn-ocaml-client.opam  learn-ocaml-client.opam.locked  learn-ocaml.opam  learn-ocaml.opam.locked  token.json
.github/workflows/: build-and-test.yml  build-macos.yml  deploy-master.yml  deploy-staging.yml  deploy-tags.yml  static-builds.yml
demo-repository/: server_config.json
scripts/: credit-region.el  credit-region.sh  static-build.sh
src/app/: dune  learnocaml_common.ml  learnocaml_common.mli  learnocaml_config.ml  learnocaml_config.mli  learnocaml_description_main.ml  learnocaml_exercise_main.ml  learnocaml_index_main.ml  learnocaml_local_storage.ml  learnocaml_local_storage.mli  learnocaml_lti_main.ml  learnocaml_redirection_badexercise.ml  learnocaml_redirection_badlesson.ml  learnocaml_redirection_badplayground.ml  learnocaml_redirection_main.ml  learnocaml_upgrade_main.ml  learnocaml_validate_main.ml
src/grader/: dune  grader_cli.ml  test_lib.ml  test_lib.mli
src/main/: dune  learnocaml_client.ml  learnocaml_client_oauth_moodle_dev.ml  learnocaml_main.ml  learnocaml_server_main.ml  linking_flags.sh
src/repo/: dune  learnocaml_exercise.mli  learnocaml_process_exercise_repository.ml
src/server/: dune  learnocaml_server.ml
src/state/: bd.ml  dune  learnocaml_api.ml  learnocaml_api.mli  learnocaml_data.ml  learnocaml_data.mli  learnocaml_store.ml  learnocaml_store.mli  token_index.ml  token_index.mli
src/utils/: dune  js_utils.ml  js_utils.mli  learnocaml_sendmail.ml  learnocaml_sendmail.mli  learnocaml_xor.ml  lwt_utils.ml  lwt_utils.mli
static/: exercise.html  index.html  lti.html  redirection.html  redirection_badexercise.html  redirection_badlesson.html  redirection_badplayground.html  reset.html  upgrade.html  validate.html
static/css/: learnocaml_common.css  (+1 more)
translations/: fr.po
