(library
 (name learnocaml_server_lib)
 (wrapped false)
 (flags :standard -warn-error +8-9-27-32)
 (modules Learnocaml_server)
 (preprocess
 	(per_module ((pps ppx_ocplib_i18n js_of_ocaml.ppx)
 			Learnocaml_server)))
 (libraries ocplib-json-typed
            ezjsonm
            lwt.unix
            lwt_utils
            cohttp.lwt
            magic-mime
            sha
            checkseum.c
            decompress
            learnocaml_report
            learnocaml_data
            learnocaml_api
            learnocaml_store
            jsutils
            learnocaml_sendmail
            token_index
            learnocaml_partition_create
            cryptokit
            markup)
)
